Minor updates to demo

--- a/tutorials/Demo.Rmd
+++ b/tutorials/Demo.Rmd
@@ -45,7 +45,7 @@ This tutorial is an extension of the example presented on the [home page](https:
 
 ## Recorded Demo
 
-Below is a shortened demonstration of some of the content in this tutorial. Please note that this demo was recorded in December 2024, right before the tool's first release in January 2025. If you encounter issues with your code, double-check with the package's documentation, which will be up-to-date.
+Below is a shortened demonstration of some of the content in this tutorial. Please note that this demo was recorded in October 2024, before the tool's first release in January 2025. If you encounter issues with your code, double-check with the package's documentation, which will be up-to-date.
 
 <iframe width="640" height="360" src="https://youtube.com/embed/Q8XJTTkjcts?autoplay&amp;end=1577&amp;start=1200 " frameborder="0" allowfullscreen>
 
@@ -103,7 +103,7 @@ The user can now designate paths within the folder containing the 'here' file. N
 
 ## Locate Model Output File
 
-For this step, we recommend either placing the model results file for either Stock Synthesis (SS3) or Beaufort Assessment Model (BAM) into your working directory. The model results files are the Report.sso file (SS3) and the .rdat file produced after running the ADMB2R routines (BAM).
+For this step, we recommend either placing the model results file for either Stock Synthesis (SS3) or Beaufort Assessment Model (BAM) into your working directory. The model results files are the Report.sso file (SS3) or the .rdat file produced after running the ADMB2R routines (BAM).
 
 You can download the petrale sole output file [here](https://github.com/nmfs-ost/asar/tree/main/data/Report.sso).
 
@@ -119,7 +119,7 @@ output_file <- load(here::here("Report.sso))
 
 We recommend converting your output file outside of the `create_template` function for large and/or complex data sets. There are two options for running this function.
 
-1)  (Recommended) Save the converted model results as a .csv, then load into your R environment
+1)  (Recommended) Save the converted model results as a .csv
 
 ``` r
 asar::convert_output(
@@ -130,8 +130,6 @@ asar::convert_output(
   savedir = getwd(),
   save_name = "petrale_sole_std_output"
 )
-
-output <- read.csv(here::here("petrale_sole_std_output.csv"))
 ```
 
 2)  Convert model results and save as an object in your R environment
@@ -161,11 +159,9 @@ satf::exp_all_figs_tables(
   ref_line_sb = "target")
 ```
 
-*Note:* if you want increased customization for these tables/figures, we encourage you to run various functions in `satf` individually.
+*Note:* The dat file in the above function should be the converted dataframe from the `convert_outpout` function ran earlier in this tutorial. If you want increased customization for these tables/figures, we encourage you to run various functions in `satf` individually.
 
 (2) To create figures and tables _and_ the report template in the same step, set specific arguments in `asar::create_template` to run everything together. The arguments are as follows:
-
--   make_rda (required)
 
 -   rda_dir (required)
 
@@ -181,7 +177,7 @@ Optional:
 
 -   recruitment_label
 
-After selecting one of the two above options, you should have created a folder that contains .rda files containing tables and figures with their associated caption and alternative text (all pre-built for you). You must check that the captions and alternative text are complete and accurate, then update them yourself if needed. See the [accessibility-related vignette](https://nmfs-ost.github.io/asar/articles/accessibility_guide.html) for guidance.
+After selecting one of the two above options, you should have created a folder that contains .rda files of tables and figures with their associated caption and alternative text (all pre-built for you!). You must check that the captions and alternative text are complete and accurate, then update them yourself if needed. See the [accessibility-related vignette](https://nmfs-ost.github.io/asar/articles/accessibility_guide.html) for guidance.
 
 ![](images/rda_folder.PNG)
 
@@ -327,21 +323,54 @@ section_location = "after-modeling_approach"
 
 ## Figure and Table Chunks
 
+The pre-made tables and figures are generated through the use of a separate package called `satf`. By separating these two functions, it allows you to evaluate results files quickly without also generating the report. However, these two packages were co-developed to seamlessly integrate with one another and streamline the stock assessment workflow.
+
 In the `tables.qmd` and `figures.qmd` quarto files located in your folder, there will be a series of pre-made tables and figures that includes pre-written generic captions and alternative text. You are able to include or not include these objects at will. We recommend to include all default objects, but if a table or figure doesn't apply, you are able to prevent the object from being added to the report by changing the option of **eval** to false.
 
 Here is an example:
 
-``` r
-#| label: 'recruitment'
+For each object (table or figure), there will be two chunks to properly call and create the object. The first loads in the rda object for the table or figure and calls in the list within the loaded rda into separate objects.
+
+```r
+#| label: 'fig-recruitment-setup'
 #| echo: false 
 #| warning: false 
-#| eval: false 
-#| fig-cap: "Recruitment over time of this species in the region."
-#| fig-alt: "Graph of recruitment over time. Data can be found at the species folder at the Pacific Fisheries Management Council."
-satf::plot_recruitment(dat = output)
-```
+#| eval: true 
+# if the recruitment figure rda exists:
+if (file.exists(file.path(rda_dir, 'recruitment_figure.rda'))){
 
-You can also adjust figure captions and alternative text from the arguments `fig-cap` and `fig-alt`. These two areas contain pre-generated generic text that applies to the table/figure. To edit, simply make changes to the sentence(s) between the quotation marks. More guidance on writing alternative text is available on [`asar` GitHub Pages](https://nmfs-ost.github.io/asar/articles/index.html)
+  # load rda
+  load(file.path(rda_dir, 'recruitment_figure.rda'))
+
+  # save rda with plot-specific name
+  recruitment_plot_rda <- rda
+
+  # remove generic rda object
+  rm(rda)
+
+  # save figure, caption, and alt text as separate objects; set eval to TRUE
+  recruitment_plot <- recruitment_plot_rda$figure
+  recruitment_cap <- recruitment_plot_rda$cap
+  recruitment_alt_text <- recruitment_plot_rda$alt_text
+  eval_recruitment <- TRUE
+
+# if the recruitment figure rda does not exist, don't evaluate the next chunk
+} else {eval_recruitment <- FALSE}
+``` 
+
+```r 
+#| label: 'fig-recruitment-plot'
+#| echo: false 
+#| warning: false 
+#| eval: !expr eval_recruitment 
+#| fig-cap: !expr if(eval_recruitment) recruitment_cap 
+#| fig-alt: !expr if(eval_recruitment) recruitment_alt_text
+recruitment_plot
+``` 
+
+You can also adjust figure captions and alternative text from the arguments `fig-cap` and `fig-alt`. These two areas contain pre-generated generic text that applies to the table/figure. To edit, simply make changes to the sentence(s) between the quotation marks. More guidance on writing alternative text is available on [`asar` GitHub Pages](https://nmfs-ost.github.io/asar/articles/index.html).
+
+Currently, quarto does not include features for alternative text in PDFs, but the developers of asar are working on a way to get around this issue.
 
 ## Rendering
 
@@ -357,18 +386,19 @@ quarto render SAR_USWC_Petrale_sole_skeleton.qmd
 
 -   DO NOT make changes to the area between the three dashes in the quarto skeleton file (`---`) unless you are very familiar with quarto. This area controls all of the formatting and will be the most likely spot for causing the document to break when rendering.
 
--   In the future, additional tables and figures will be available from the [satf]() R package. Users can add these in by clicking the drop down button that looks like a square with a c in it or manually write in
+-   In the future, additional tables and figures will be available from the [satf](https://github.com/nmfs-ost/satf) R package. Users can add these in by clicking the drop down button that looks like a square with a c in it or manually write in
 
-```{r, eval=FALSE}
-# ```{r}
-# #| label: ''
-# #| echo: false
-# #| warning: false
-# #| eval: true 
-# #| fig-cap: "Insert figure/table caption"
-# #| fig-alt: "Insert alternative text for figure/table"
-# satf::plot_recruitment(dat = output)
-# ```
+````{verbatim}
+```{r}
+#| label: ''
+#| echo: false
+#| warning: false
+#| eval: true 
+#| fig-cap: "Insert figure/table caption"
+#| fig-alt: "Insert alternative text for figure/table"
+satf::plot_recruitment(dat = output)
 ```
+````
+
 
 -   `asar` is a continual work in progress. Version 1.0 is planned for release at the end of December of 2024 with additional features added in through 2025. Please leave an [issue](https://github.com/nmfs-ost/asar/issues) for any bugs you may run into.
